delete functionality done

--- a/src/Components/Note/Note.css
+++ b/src/Components/Note/Note.css
@@ -17,3 +17,14 @@
   outline: none;
   border: none;
 }
+
+.note-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.note-footer img {
+  cursor: pointer;
+  width: 30px;
+}
